bugfix word wrap

--- a/css/style.css
+++ b/css/style.css
@@ -5510,7 +5510,7 @@ html {
 }
 
 .footer-widget-wrapper ul {
-  white-space: wrap!important;
+  white-space: normal;
 }
 
 .scrolltotop {
